updating js to allow user added items

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
         <button onclick="generateCombination()">Generate Combination</button>
         <div id="combination"></div>
     </div>
+    <div id="custom-ingredients">
+        <h2>Add Your Own Ingredient</h2>
+        <input type="text" id="new-ingredient" placeholder="Enter an ingredient">
+        <button onclick="addIngredient()">Add Ingredient</button>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
