updating css and html

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
         <input type="text" id="new-ingredient" placeholder="Enter an ingredient">
         <button onclick="addIngredient()">Add Ingredient</button>
     </div>
+    <div id="ingredients-list">
+        <h2>Current Ingredients</h2>
+        <ul id="ingredients"></ul>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
