html/java ingredients update

--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
     <div id="custom-ingredients">
         <h2>Add Your Own Ingredient</h2>
         <input type="text" id="new-ingredient" placeholder="Enter an ingredient">
+        <select id="ingredient-category">
+            <option value="Fruits">Fruits</option>
+            <option value="Vegetables">Vegetables</option>
+            <option value="Dairy">Dairy</option>
+            <option value="Proteins">Proteins</option>
+            <option value="Spices">Spices</option>
+            <option value="Others">Others</option>
+        </select>
         <button onclick="addIngredient()">Add Ingredient</button>
     </div>
     <div id="ingredients-list">
